objects/SGR_Opportunity_Age_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FIPS_Code__c</fullName>
        <label>FIPS Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Plan_ID__c</fullName>
        <label>Marketing Plan ID</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Plan_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Plan Rate</label>
        <referenceTo>SGR_Opportunity_Plan_Rate__c</referenceTo>
        <relationshipLabel>Opportunity Age Rates</relationshipLabel>
        <relationshipName>Opportunity_Age_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating_Area__c</fullName>
        <label>Rating Area</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Effective_Date__c</fullName>
        <label>Renewal Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Plan_ID__c</fullName>
        <label>Sales Plan ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Age Rate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OAR-{0000}</displayFormat>
        <label>Opportunity Age Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Age Rates</pluralLabel>
    <recordTypes>
        <fullName>SGR_Opportunity_Age_Rate</fullName>
        <active>true</active>
        <description>SGR Opportunity Age Rate RecordType</description>
        <label>SGR Opportunity Age Rate</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>